# e2e-Data-Engineering-Pipeline-for-EPL

./: .gitignore  LICENSE  README.md  structure.txt  template.py
football-data-pipeline/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements-scraper.txt  requirements-streamlit.txt  requirements.txt
football-data-pipeline/.github/workflows/: ci-cd.yml
football-data-pipeline/airflow/dags/: football_etl_dag.py
football-data-pipeline/config/: config.yaml  settings.py
football-data-pipeline/dashboard/: app.py
football-data-pipeline/dbt/models/: schema.yaml
football-data-pipeline/dbt/models/staging/: stg_matches.sql  stg_players.sql  stg_teams.sql
football-data-pipeline/dbt/profiles/: profiles.yaml
football-data-pipeline/deployment/docker/airflow/: Dockerfile
football-data-pipeline/deployment/docker/dbt/: Dockerfile
football-data-pipeline/deployment/docker/postgres/: init.sql
football-data-pipeline/deployment/docker/scraper/: Dockerfile
football-data-pipeline/deployment/docker/streamlit/: Dockerfile
football-data-pipeline/infrastructure/gcp/: main.tf  terraform.tfvars
football-data-pipeline/kestra/flows/: football_data_pipeline.yml
football-data-pipeline/src/extraction/understat/: loader.py  scraper.py  scraper2.py
football-data-pipeline/src/processing/: spark_processor.py
football-data-pipeline/src/scraping/scrapers/: base_scraper.py  match_scraper.py
football-data-pipeline/src/scraping/utils/: rate_limiter.py
football-data-pipeline/src/storage/: bigquery_storage.py  postgres_storage.py  storage_factory.py
football-data-pipeline/src/storage/postgres/: models.py  repository.py
football-data-pipeline/src/streaming/: match_streaming.py  redpanda_consumer.py  redpanda_producer.py
football-data-pipeline/src/streaming/consumers/: kafka_consumer.py
football-data-pipeline/src/utils/: config.py  db.py  refresh_dashboard_data.py
